# mkcert-rs

./: .env.sample  Cargo.toml  config.sample.json  readme.md
src/: config.rs  env.rs  main.rs
