[package]
name = "mkcert-rs"
version = "0.1.1"
edition = "2021"

[profile.release]
strip = true
panic = "abort"
codegen-units = 1

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
rcgen = { version = "0.13.2", features = ["x509-parser", "crypto"] }
thiserror = { version = "2.0.12" }
rustls-pemfile = { version = "2.2.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
